# deepseek

./: .env-example  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  test.py
az_deepseek/: hosting.py
az_deepseek/protocols/: i_azure_deepseek.py
az_deepseek/services/: azure_deepseek.py
tests/az_deepseek/services/: test_azure_deepseek.py
